--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
-				<i class="la la-bars"></i>
+				<i class="fa-solid fa-bars"></i>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -195,7 +195,7 @@
 					width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
-			<div class="row g-5">
+			<div class="row g-5"> 
 				<div class="col-md col-sm-12">
 					<h2>Entre em Contato</h2>
 					<p>Entre em contato conosco para obter mais informações sobre nossos serviços de treinamento e
