--- a/imc.html
+++ b/imc.html
@@ -24,11 +24,12 @@
 
     <div id="navbar" class="navbar navbar-expand-lg justify-content-center align-items-center">
         <div class="container">
-            <a href="#home" class="navbar-brand"><img style="width: 100%; height: 100%;" src="img/Logo TigerFit Branco.png" alt=""></a>
+            <a href="#home" class="navbar-brand"><img style="width: 100%; height: 100%;"
+                    src="img/Logo TigerFit Branco.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <i class="la la-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -38,11 +39,13 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Galeria</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html">Preços</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html">Contato</a></li>
-                    <li class="nav-item"><a class="nav-link" href="imc.html"><i class="fa-solid fa-weight-scale"></i> IMC</a></li>
+                    <li class="nav-item"><a class="nav-link" href="imc.html"><i class="fa-solid fa-weight-scale"></i>
+                            IMC</a></li>
                 </ul>
             </div>
             <ul class="button-navbar">
-                <li><a href="index.html"><button class="button-destaque">Matricule-se Já <i class="fa-solid fa-dumbbell fa-beat-fade fa-lg"></i></button></a></li>
+                <li><a href="index.html"><button class="button-destaque">Matricule-se Já <i
+                                class="fa-solid fa-dumbbell fa-beat-fade fa-lg"></i></button></a></li>
             </ul>
         </div>
     </div>
@@ -56,7 +59,7 @@
             <h2>Peso (Kg):</h2>
             <input type="number" id="peso" name="peso">
         </div>
-        <textarea readonly id="resultado" name="Resultado"></textarea>
+        <textarea readonly id="resultado" name="Resultado" class="invisivel"></textarea>
         <br>
         <button id="btn_calcular">Calcular</button>
     </div>
