--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
 
 	<div id="about" class="about">
 		<div class="container">
-			<h2 style="text-align: center;">ESTAMOS AQUI PARA MELHORAR A SUA SAÚDE, E FÍSICO, DE FORMA ADEQUADA E
+			<h2 class="titulo"style="text-align: center;">ESTAMOS AQUI PARA MELHORAR A SUA SAÚDE, E FÍSICO, DE FORMA ADEQUADA E
 				CORRETA</h2>
-			<br>
-			<br>
 			<div class="row g-5">
 				<div class="col-md-7">
 					<div class="content-left">
@@ -153,34 +151,30 @@
 				</div>
 				<div class="col-md">
 					<div class="content">
-						<h4 style="text-align: center;">Plano Mensal</h4>
-						<p style="text-align: justify;">Aulas de Zumba & FitDance toda quarta as 19hrs,
-							agende sessões de treinamento pessoal com nossos instrutores.</p>
+						<h4 style="text-align: center;">Plano Fidelidade</h4>
+						<p style="text-align: center;">PLANO RECORRÊNCIA FIDELIDADE</p>
 						<ul>
-							<li><i class="fa-regular fa-circle-check"></i>Aulas conduzidas por instrutores</li>
+							<li><i class="fa-regular fa-circle-check"></i>Acesso total as aulas e estrutura</li>
+							<li><i class="fa-regular fa-circle-check"></i>Taxa Zero</li>
 							<li><i class="fa-regular fa-circle-check"></i>Bebida grátis em cada treino</li>
-							<li><i class="fa-regular fa-circle-check"></i>Compra de suplementos com desconto</li>
+							<li><i class="fa-regular fa-circle-check"></i>Fidelidade de 12 meses</li>
 						</ul>
-						<h2>R$ 200/mês</h2>
-						<button class="button">EU QUERO ESSE!</button>
+						<h2>R$ 150/mês</h2>
+						<button class="button">Mais Informações</button>
 					</div>
 				</div>
 				<div class="col-md">
 					<div class="content">
-						<h4 style="text-align: center;">Plano Anual</h4>
-						<p style="text-align: justify;">Além dos benefícios do plano mensal,
-							ganhe acesso a todas a nossas unidades do Brasil, número ilimitado de acompanhantes,
-							tenha acesso ao nosso App exclusivo e experimente nossas cadeiras de massagem.</p>
+						<h4 style="text-align: center;">Plano Premium</h4>
+						<p style="text-align: center;">PLANO RECORRÊNCIA GOLD PREMIUM</p>
 						<ul>
-							<li><i class="fa-regular fa-circle-check"></i>Treine em +1000 academias da nossa rede
-								espalhadas pelo Brasil</li>
-							<li><i class="fa-regular fa-circle-check"></i>Leve amigos para treinar com você</li>
-							<li><i class="fa-regular fa-circle-check"></i>Cadeira de Massagem</li>
+							<li><i class="fa-regular fa-circle-check"></i>Acesso total as aulas e estrutura</li>
+							<li><i class="fa-regular fa-circle-check"></i>Taxa Zero</li>
+							<li><i class="fa-regular fa-circle-check"></i>Sem taxa de cancelamento</li>
 							<li><i class="fa-regular fa-circle-check"></i>TigerFit App</li>
 						</ul>
-						<h2>R$ 1.800/ano</h2>
-						<p style="font-size: 12px; margin-top: -20px;">(O equivalente a 10 meses do Plano Mensal)</p>
-						<button class="button">EU QUERO ESSE!</button>
+						<h2>R$ 200/mês</h2>
+						<button class="button">Mais Informações</button>
 					</div>
 				</div>
 			</div>
@@ -329,11 +323,10 @@
 			<div class="row">
 				<div class="col-md col-sm-6">
 					<ul>
-						<li><a href=""><i class="fa-brands fa-github"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
 						<li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-						<li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
-						<li><a href=""><i class="fa-brands fa-discord"></i></a></li>
-						<li><a href=""><i class="fa-brands fa-figma"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-md col-sm-6">
