--- a/imc.html
+++ b/imc.html
@@ -35,10 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Empresa</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Galeria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html/#about">Empresa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html/#gallery">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html/#pricing">Preços</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html/#contact">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="imc.html"><i class="fa-solid fa-weight-scale"></i>
                             IMC</a></li>
                 </ul>
@@ -53,13 +53,13 @@
         <h1>Calculadora de IMC</h1>
         <div class="input_campo">
             <h2>Altura (Centímetros):</h2>
-            <input type="number" id="altura" name="altura">
+            <input type="number" required id="altura" name="txtaltura">
         </div>
         <div class="input_campo">
             <h2>Peso (Kg):</h2>
             <input type="number" id="peso" name="peso">
         </div>
-        <textarea readonly id="resultado" name="Resultado" class="invisivel"></textarea>
+        <textarea readonly id="resultado" name="Resultado"></textarea>
         <br>
         <button id="btn_calcular">Calcular</button>
     </div>
