--- a/imc.html
+++ b/imc.html
@@ -35,10 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html/#about">Empresa</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html/#gallery">Galeria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html/#pricing">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html/#contact">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Empresa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Preços</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="imc.html"><i class="fa-solid fa-weight-scale"></i>
                             IMC</a></li>
                 </ul>
