--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<div id="navbar" class="navbar navbar-expand-lg justify-content-center align-items-center">
 		<div class="container">
-			<a href="#home" class="navbar-brand"><img style="width: 100%; height: 100%;"
+			<a href="index.html" class="navbar-brand"><img style="width: 100%; height: 100%;"
 					src="img/Logo TigerFit Branco.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
