--- a/imc.html
+++ b/imc.html
@@ -68,11 +68,10 @@
             <div class="row">
                 <div class="col-md col-sm-6">
                     <ul>
-                        <li><a href=""><i class="fa-brands fa-github"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-discord"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-figma"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md col-sm-6">
