--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
 					<li class="nav-item"><a class="nav-link" href="#gallery">Galeria</a></li>
 					<li class="nav-item"><a class="nav-link" href="#pricing"> Preços</a></li>
 					<li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
-					<li class="nav-item"><a class="nav-link" href="imc.html"><i class="fa-solid fa-weight-scale"></i> IMC</a></li>
+					<li class="nav-item"><a class="nav-link" href="imc.html"><i class="fa-solid fa-weight-scale"></i>
+							IMC</a></li>
 				</ul>
 			</div>
 
 			<ul class="button-navbar">
-				<li><a href="#pricing"><button class="button-destaque">Matricule-se Já <i class="fa-solid fa-dumbbell fa-beat-fade fa-lg"></i></button></a></li>
+				<li><a href="#pricing"><button class="button-destaque">Matricule-se Já <i
+								class="fa-solid fa-dumbbell fa-beat-fade fa-lg"></i></button></a></li>
 			</ul>
 		</div>
 	</div>
@@ -80,7 +82,8 @@
 
 	<div id="about" class="about">
 		<div class="container">
-			<h2 class="titulo"style="text-align: center;">ESTAMOS AQUI PARA MELHORAR A SUA SAÚDE, E FÍSICO, DE FORMA ADEQUADA E
+			<h2 class="titulo" style="text-align: center;">ESTAMOS AQUI PARA MELHORAR A SUA SAÚDE, E FÍSICO, DE FORMA
+				ADEQUADA E
 				CORRETA</h2>
 			<div class="row g-5">
 				<div class="col-md-7">
@@ -189,7 +192,7 @@
 					width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
-			<div class="row g-5"> 
+			<div class="row g-5">
 				<div class="col-md col-sm-12">
 					<h2>Entre em Contato</h2>
 					<p>Entre em contato conosco para obter mais informações sobre nossos serviços de treinamento e
@@ -249,11 +252,16 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div class="content">
-							<p>Não tenho palavras para agradecer à TigerFit por ter me ajudado a alcançar meus objetivos como atleta.
-								 Desde o primeiro dia, fui muito bem orientado pelos profissionais da academia, que me ajudaram a criar
-								  um plano de treino personalizado para minha modalidade esportiva. Além disso, a academia tem uma estrutura
-								   incrível, com equipamentos de última geração e espaços amplos para treinar. Sem dúvida, a TigerFit foi fundamental
-								    na minha evolução como atleta e só tenho a agradecer a toda a equipe pelos cuidados e atenção dedicados a mim.</p>
+							<p>Não tenho palavras para agradecer à TigerFit por ter me ajudado a alcançar meus objetivos
+								como atleta.
+								Desde o primeiro dia, fui muito bem orientado pelos profissionais da academia, que me
+								ajudaram a criar
+								um plano de treino personalizado para minha modalidade esportiva. Além disso, a academia
+								tem uma estrutura
+								incrível, com equipamentos de última geração e espaços amplos para treinar. Sem dúvida,
+								a TigerFit foi fundamental
+								na minha evolução como atleta e só tenho a agradecer a toda a equipe pelos cuidados e
+								atenção dedicados a mim.</p>
 							<div class="text">
 								<h5>Ramon Dino</h5>
 								<span>Fisiculturista</span>
@@ -262,11 +270,15 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="content">
-							<p>Como atleta profissional, a TigerFit se tornou minha segunda casa. Desde o primeiro dia, fui muito bem recebido pela equipe
-								 da academia, que me ajudou a superar limites e evoluir como atleta. A academia tem uma estrutura incrível, com equipamentos
-								  de qualidade e espaços amplos para treinar. Além disso, os profissionais são extremamente capacitados e dedicados, oferecendo
-								   orientação técnica e emocional para garantir que eu esteja sempre evoluindo. Sem a TigerFit, não teria conseguido chegar onde estou hoje. 
-								   Agradeço a todos da equipe por me ajudarem a realizar meu sonho.</p>
+							<p>Como atleta profissional, a TigerFit se tornou minha segunda casa. Desde o primeiro dia,
+								fui muito bem recebido pela equipe
+								da academia, que me ajudou a superar limites e evoluir como atleta. A academia tem uma
+								estrutura incrível, com equipamentos
+								de qualidade e espaços amplos para treinar. Além disso, os profissionais são
+								extremamente capacitados e dedicados, oferecendo
+								orientação técnica e emocional para garantir que eu esteja sempre evoluindo. Sem a
+								TigerFit, não teria conseguido chegar onde estou hoje.
+								Agradeço a todos da equipe por me ajudarem a realizar meu sonho.</p>
 							<div class="text">
 								<h5>Icáro Lemen</h5>
 								<span>Atleta natural, 19 anos, vegano e alérgico a água</span>
@@ -275,11 +287,15 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="content">
-							<p>A TigerFit é uma academia excepcional para atletas que buscam evoluir e superar limites. Desde que comecei a treinar na academia, 
-								senti que estava em um lugar especial, com uma equipe incrível e uma estrutura de qualidade. Os instrutores são extremamente capacitados
-								 e dedicados, oferecendo suporte em todos os aspectos, desde o treino até a nutrição. Além disso, o ambiente da academia é extremamente 
-								 motivador, com outros atletas treinando lado a lado, incentivando uns aos outros a evoluir. Agradeço à TigerFit por me proporcionar uma 
-								 experiência única como atleta e por me ajudar a alcançar meus objetivos.</p>
+							<p>A TigerFit é uma academia excepcional para atletas que buscam evoluir e superar limites.
+								Desde que comecei a treinar na academia,
+								senti que estava em um lugar especial, com uma equipe incrível e uma estrutura de
+								qualidade. Os instrutores são extremamente capacitados
+								e dedicados, oferecendo suporte em todos os aspectos, desde o treino até a nutrição.
+								Além disso, o ambiente da academia é extremamente
+								motivador, com outros atletas treinando lado a lado, incentivando uns aos outros a
+								evoluir. Agradeço à TigerFit por me proporcionar uma
+								experiência única como atleta e por me ajudar a alcançar meus objetivos.</p>
 							<div class="text">
 								<h5>Chris Bumstead</h5>
 								<span>Fisiculturista vencedor do Mr. Olympia</span>
@@ -288,12 +304,17 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="content">
-							<p>Ser atleta exige muito mais do que força física e técnica. Exige disciplina, comprometimento e dedicação, valores que encontrei em 
-								abundância na TigerFit. Desde o primeiro dia, fui muito bem recebida pela equipe da academia, que me ajudou a criar um plano de treino
-								 personalizado para minha modalidade esportiva e me orientou em relação à minha alimentação e descanso. A academia tem uma estrutura incrível,
-								  com equipamentos de última geração e espaços amplos para treinar. Mas o que mais me encantou na TigerFit foi o ambiente motivador e a sensação
-								   de que todos estavam trabalhando juntos para evoluir. Sou muito grata à TigerFit por me ajudar a me tornar não apenas uma atleta melhor, mas uma
-								    pessoa melhor.</p>
+							<p>Ser atleta exige muito mais do que força física e técnica. Exige disciplina,
+								comprometimento e dedicação, valores que encontrei em
+								abundância na TigerFit. Desde o primeiro dia, fui muito bem recebida pela equipe da
+								academia, que me ajudou a criar um plano de treino
+								personalizado para minha modalidade esportiva e me orientou em relação à minha
+								alimentação e descanso. A academia tem uma estrutura incrível,
+								com equipamentos de última geração e espaços amplos para treinar. Mas o que mais me
+								encantou na TigerFit foi o ambiente motivador e a sensação
+								de que todos estavam trabalhando juntos para evoluir. Sou muito grata à TigerFit por me
+								ajudar a me tornar não apenas uma atleta melhor, mas uma
+								pessoa melhor.</p>
 							<div class="text">
 								<h5>LeanBeefPatty</h5>
 								<span>Atleta estrangeira</span>
